# KifuwaraperyR

./: .gitignore  CMakeLists.txt  CMakeLists.txt.commentary.md  CMakePresets.json  README.md  config.toml
docs/: README.md  よく使うコメント.md
src/: CMakeLists.txt  CMakeLists.txt.commentary.md  KifuwaraperyR.cpp  KifuwaraperyR.h  game_engine.cpp  game_engine.hpp  logging_setup.cpp  logging_setup.h  main.cpp  main.hpp  muz_game_engine_service.cpp  muz_game_engine_service.hpp
src/app_layer/: logging_setup.cpp
src/concept_app/: muz_logging_service.cpp
src/concept_game_engine/: muz_game_engine_service.cpp  muz_game_engine_service.hpp  muz_game_engine_storage_model.cpp  muz_game_engine_storage_model.hpp
src/core_library/lib_55a_toybox_95b_hand_stand/: muz_hand_stand_model.hpp
src/core_library/lib_5a_toybox_n1/: muz_position_n1_model.hpp  piece_type.hpp
src/core_library/lib_5a_toybox_n3/: muz_position_n3_model.hpp
src/core_library/lib_95a_cpp/: overload_enum_operators.hpp
src/game_engine/: muz_game_engine_service.cpp  muz_game_engine_storage_model.cpp
src/game_engine_layer/: game_engine_storage.cpp
src/interfaces/: i_muz_engine_option_abstract_model.hpp  i_muz_engine_option_model.hpp  i_muz_engine_settings_model.hpp  n55a55b_i_game_engine_storage_model.hpp
src/layer_app/: logging_setup.cpp  muz_default_logger_model.hpp  muz_logging_service.cpp  muz_logging_service.hpp
src/layer_game_engine/: game_engine_storage.hpp  muz_game_engine_storage_model.hpp
src/lib_1a2b_cli/: muz_cli_result_model.cpp  muz_cli_result_model.hpp  muz_cli_service.cpp  muz_cli_service.hpp
src/lib_5a_toybox_1b_hand_stand/: muz_hand_stand_collection_model.cpp  muz_hand_stand_collection_model.hpp  muz_hand_stand_collection_service.cpp  muz_hand_stand_model.cpp  muz_hand_stand_model.hpp
src/lib_5a_toybox_2b_board/: muz_board_model.cpp  muz_board_model.hpp  piece.hpp  square.hpp
src/lib_5a_toybox_base/: muz_hand_model.hpp--調査中.cpp  muz_position_base_model.hpp--調査中.cpp
src/lib_5a_toybox_n1/: muz_position_n1_model.cpp  muz_position_n1_model.hpp  piece_type.hpp
src/lib_5a_toybox_n2/: char_to_piece_usi.hpp  muz_position_n2_model.hpp  piece_types.hpp
src/lib_5a_toybox_n3/: muz_position_n3_model.cpp  muz_position_n3_model.hpp
src/lib_cpp/: overload_enum_operators.hpp
src/lib_gui/: i_muz_engine_optionable_model.cpp  i_muz_engine_optionable_model.hpp  muz_engine_option_button_model.cpp  muz_engine_option_checkbox_model.cpp  muz_engine_option_spinbox_model.cpp  muz_engine_option_textbox_model.cpp  muz_engine_settings_model.hpp
src/lib_toybox_base/: color.hpp  file.hpp  hand.hpp  hand_piece.hpp  muz_hand_model.hpp  muz_hand_model.hpp--調査中.cpp  muz_position_base_model.cpp  muz_position_base_model.hpp  muz_position_base_model.hpp--調査中.cpp  muz_position_n1_model.hpp  n2_char_to_piece_usi.hpp  n2_hand_piece_ope.hpp  n2_square_ope.hpp  piece.hpp  piece_type.hpp  ply.hpp  rank.hpp  square.hpp  square_delta.hpp  square_ope.hpp
src/lib_toybox_n1/: muz_hand_n1_model.hpp  muz_hand_stand_model.hpp  muz_position_n1_model.cpp  muz_position_n1_model.hpp
src/lib_toybox_n1_hand_stand/: muz_hand_stand_model.hpp
src/lib_toybox_n2/: char_to_piece_usi.hpp  file_ope.hpp  muz_position_n2_model.cpp  muz_position_n2_model.hpp  piece_type_ope.hpp  piece_types.cpp  rank_ope.hpp  squares.hpp
src/lib_toybox_n3/: muz_position_n3_model.cpp  muz_position_n3_model.hpp
src/n11a_views/n11a55b_toybox/: n11a55b100c_piece_view.cpp  n11a55b100c_piece_view.hpp  n11a55b105c_turn_view.cpp  n11a55b105c_turn_view.hpp  n11a55b94c_board_view.cpp  n11a55b94c_board_view.hpp  n11a55b95c_hand_stand_view.cpp  n11a55b95c_hand_stand_view.hpp
src/n11a_views/view_55a_toybox/: muz_5a1b_hand_stand_view.hpp  muz_5a24b1c_piece_view.hpp
src/n23a_usi_string_and_object/: usi_string_and_move.hpp
src/n55a_game_engine/: muz_game_engine_service.cpp  n55a11b_game_engine_service.cpp  n55a11b_game_engine_service.hpp  n55a55b_game_engine_storage_model.cpp  n55a55b_game_engine_storage_model.hpp  n55a55b_i_game_engine_storage_model.hpp
src/n91a_application/: muz_default_logger_model.cpp
src/n95a_core_library/lib_5a_gui/: muz_engine_option_abstract_model.hpp  muz_engine_settings_model.hpp
src/n95a_core_library/lib_5a_toybox_base/: muz_position_base_model.hpp--調査中.cpp
src/n95a_core_library/lib_5a_toybox_n1/: muz_position_n1_model.cpp  muz_position_n1_model.hpp  piece_type.hpp  piece_types.hpp
src/n95a_core_library/lib_5a_toybox_n2/: muz_position_n2_model.cpp  muz_position_n2_model.hpp  piece_types.cpp  piece_types.hpp
src/n95a_core_library/lib_5a_toybox_n3/: muz_position_n3_model.cpp  muz_position_n3_model.hpp
src/n95a_core_library/n95a55b_toybox_103c_ply/: muz_ply_model.cpp  muz_ply_model.hpp  ply.hpp
src/n95a_core_library/n95a55b_toybox_105c_turn/: muz_turn_model.cpp
src/n95a_core_library/n95a55b_toybox_85c_position/: muz_position_model.cpp  muz_position_model.hpp
src/n95a_core_library/n95a55b_toybox_94c_board/: muz_board_model.cpp  muz_board_model.hpp  square.hpp  square_delta.hpp  square_ope.hpp
src/n95a_core_library/n95a55b_toybox_95c_hand_stand/: muz_hand_stand_collection_model.cpp  muz_hand_stand_collection_model.hpp  muz_hand_stand_collection_service.cpp
src/n95a_core_library/n95a55b_toybox_96c_turn/: muz_turn_model.hpp
src/n95a_core_library/n95a55b_toybox_97c_ply/: muz_ply_model.cpp  muz_ply_model.hpp
src/n95a_core_library/n95a79b_rucksack/: muz_rucksack_model.cpp  muz_rucksack_model.hpp
src/n95a_core_library/n95a83b_transpositional_position/: muz_move_model.h  muz_transpositional_position_model.cpp  muz_transpositional_position_model.hpp
src/n95a_core_library/n95a95b_infrastructure_95c_cpp/: muz_string_service.hpp
src/view_5a_toybox/: muz_5a1b_hand_stand_view.hpp  muz_5a24b1c_piece_view.cpp  muz_5a24b1c_piece_view.hpp  muz_5a25b_board_view.cpp  muz_5a25b_board_view.hpp  muz_5a2b_board_view.cpp
src/view_5a_toybox_1b_hand_stand/: muz_hand_stand_view.cpp  muz_hand_stand_view.hpp
src/views/view_55a_toybox/: muz_5a1b_hand_stand_view.hpp  muz_5a24b1c_piece_view.hpp  muz_5a25b_board_view.hpp
(+3 files in other folders)
